--- a/slides/bio.bib
+++ b/slides/bio.bib
@@ -1409,5 +1409,31 @@
 }
 
 
+@article{thoppilan2022lamda,
+  title={Lamda: Language models for dialog applications},
+  author={Thoppilan, Romal and De Freitas, Daniel and Hall, Jamie and Shazeer, Noam and Kulshreshtha, Apoorv and Cheng, Heng-Tze and Jin, Alicia and Bos, Taylor and Baker, Leslie and Du, Yu and others},
+  journal={arXiv preprint arXiv:2201.08239},
+  year={2022}
+}
+
+
+@misc{openai2023gpt4,
+      title={GPT-4 Technical Report},
+      author={OpenAI},
+      year={2023},
+      eprint={2303.08774},
+      archivePrefix={arXiv},
+      primaryClass={cs.CL}
+}
+
+@inproceedings{bender2021dangers,
+  title={On the Dangers of Stochastic Parrots: Can Language Models Be Too Big?},
+  author={Bender, Emily M and Gebru, Timnit and McMillan-Major, Angelina and Shmitchell, Shmargaret},
+  booktitle={Proceedings of the 2021 ACM conference on fairness, accountability, and transparency},
+  pages={610--623},
+  year={2021}
+}
+
+
 
 @Comment{jabref-meta: databaseType:bibtex;}
