--- a/slides/bio.bib
+++ b/slides/bio.bib
@@ -1435,5 +1435,14 @@
 }
 
 
+@misc{chung2022scaling,
+      title={Scaling Instruction-Finetuned Language Models},
+      author={Hyung Won Chung and Le Hou and Shayne Longpre and Barret Zoph and Yi Tay and William Fedus and Yunxuan Li and Xuezhi Wang and Mostafa Dehghani and Siddhartha Brahma and Albert Webson and Shixiang Shane Gu and Zhuyun Dai and Mirac Suzgun and Xinyun Chen and Aakanksha Chowdhery and Alex Castro-Ros and Marie Pellat and Kevin Robinson and Dasha Valter and Sharan Narang and Gaurav Mishra and Adams Yu and Vincent Zhao and Yanping Huang and Andrew Dai and Hongkun Yu and Slav Petrov and Ed H. Chi and Jeff Dean and Jacob Devlin and Adam Roberts and Denny Zhou and Quoc V. Le and Jason Wei},
+      year={2022},
+      eprint={2210.11416},
+      archivePrefix={arXiv},
+      primaryClass={cs.LG}
+}
+
 
 @Comment{jabref-meta: databaseType:bibtex;}
