--- a/slides/bio.bib
+++ b/slides/bio.bib
@@ -1454,4 +1454,44 @@
       primaryClass={cs.CL}
 }
 
+
+@article{bengio2000neural,
+  title={A neural probabilistic language model},
+  author={Bengio, Yoshua and Ducharme, R{\'e}jean and Vincent, Pascal},
+  journal={Advances in neural information processing systems},
+  volume={13},
+  year={2000}
+}
+
+@article{blei2003latent,
+  title={Latent dirichlet allocation},
+  author={Blei, David M and Ng, Andrew Y and Jordan, Michael I},
+  journal={Journal of machine Learning research},
+  volume={3},
+  number={Jan},
+  pages={993--1022},
+  year={2003}
+}
+
+@article{shannon1951prediction,
+  title={Prediction and entropy of printed English},
+  author={Shannon, Claude E},
+  journal={Bell system technical journal},
+  volume={30},
+  number={1},
+  pages={50--64},
+  year={1951},
+  publisher={Wiley Online Library}
+}
+
+@incollection{chomsky2009syntactic,
+  title={Syntactic structures},
+  author={Chomsky, Noam},
+  booktitle={Syntactic Structures},
+  year={2009},
+  publisher={De Gruyter Mouton}
+}
+
+
+
 @Comment{jabref-meta: databaseType:bibtex;}
