--- a/slides/bio.bib
+++ b/slides/bio.bib
@@ -1492,6 +1492,17 @@
   publisher={De Gruyter Mouton}
 }
 
+@article{goodman2001bit,
+  title={A bit of progress in language modeling},
+  author={Goodman, Joshua T},
+  journal={Computer Speech \& Language},
+  volume={15},
+  number={4},
+  pages={403--434},
+  year={2001},
+  publisher={Elsevier}
+}
+
 
 
 @Comment{jabref-meta: databaseType:bibtex;}
