--- a/slides/bio.bib
+++ b/slides/bio.bib
@@ -1504,5 +1504,17 @@
 }
 
 
+@inproceedings{mccallum1998comparison,
+  title={A comparison of event models for naive bayes text classification},
+  author={McCallum, Andrew and Nigam, Kamal and others},
+  booktitle={AAAI-98 workshop on learning for text categorization},
+  volume={752},
+  number={1},
+  pages={41--48},
+  year={1998},
+  organization={Madison, WI}
+}
+
+
 
 @Comment{jabref-meta: databaseType:bibtex;}
