--- a/slides/bio.bib
+++ b/slides/bio.bib
@@ -1515,6 +1515,17 @@
   organization={Madison, WI}
 }
 
+@article{kupiec1992robust,
+  title={Robust part-of-speech tagging using a hidden Markov model},
+  author={Kupiec, Julian},
+  journal={Computer speech \& language},
+  volume={6},
+  number={3},
+  pages={225--242},
+  year={1992},
+  publisher={Elsevier}
+}
+
 
 
 @Comment{jabref-meta: databaseType:bibtex;}
