--- a/slides/bio.bib
+++ b/slides/bio.bib
@@ -1526,6 +1526,21 @@
   publisher={Elsevier}
 }
 
+@article{bikelSW99,
+  author       = {Daniel M. Bikel and
+                  Richard M. Schwartz and
+                  Ralph M. Weischedel},
+  title        = {An Algorithm that Learns What's in a Name},
+  journal      = {Mach. Learn.},
+  volume       = {34},
+  number       = {1-3},
+  pages        = {211--231},
+  year         = {1999},
+  url          = {https://doi.org/10.1023/A:1007558221122},
+  doi          = {10.1023/A:1007558221122}
+}
+
+
 
 
 @Comment{jabref-meta: databaseType:bibtex;}
