--- a/slides/bio.bib
+++ b/slides/bio.bib
@@ -1541,6 +1541,20 @@
 }
 
 
+@Inbook{ramshaw1999text,
+author="Ramshaw, L. A.
+and Marcus, M. P.",
+title="Text Chunking Using Transformation-Based Learning",
+bookTitle="Natural Language Processing Using Very Large Corpora",
+year="1999",
+publisher="Springer Netherlands",
+address="Dordrecht",
+pages="157--176",
+isbn="978-94-017-2390-9",
+doi="10.1007/978-94-017-2390-9_10",
+url="https://doi.org/10.1007/978-94-017-2390-9_10"
+}
+
 
 
 @Comment{jabref-meta: databaseType:bibtex;}
