--- a/slides/bio.bib
+++ b/slides/bio.bib
@@ -1378,7 +1378,9 @@
 
 @article{radford2018improving,
   title={Improving language understanding by generative pre-training},
-  author={Radford, Alec and Narasimhan, Karthik and Salimans, Tim and Sutskever, Ilya and others}
+  author={Radford, Alec and Narasimhan, Karthik and Salimans, Tim and Sutskever, Ilya and others},
+  year={2018},
+  booktitle={Technical Report, OpenAI}
 }
 
 
@@ -1509,7 +1511,6 @@
   author={McCallum, Andrew and Nigam, Kamal and others},
   booktitle={AAAI-98 workshop on learning for text categorization},
   volume={752},
-  number={1},
   pages={41--48},
   year={1998},
   organization={Madison, WI}
