--- a/slides/bio.bib
+++ b/slides/bio.bib
@@ -412,13 +412,13 @@
   Title                    = {Speech and Language Processing: An Introduction to Natural Language Processing, Computational Linguistics, and Speech Recognition},
   Author                   = {Jurafsky, Daniel and Martin, James H.},
   Publisher                = {Prentice Hall},
-  Year                     = {2008},
+  Year                     = {2023},
 
   Address                  = {Upper Saddle River, NJ, USA},
-  Edition                  = {2nd},
+  Edition                  = {3rd (draft)},
+  url                      = {https://web.stanford.edu/~jurafsky/slp3/}
 
-  Owner                    = {admin},
-  Timestamp                = {2017.12.07}
+
 }
 
 @InProceedings{kamps2004,
@@ -1554,6 +1554,14 @@ pages="157--176",
 isbn="978-94-017-2390-9",
 doi="10.1007/978-94-017-2390-9_10",
 url="https://doi.org/10.1007/978-94-017-2390-9_10"
+}
+
+@article{collins2013language,
+  title={Statistical NLP Lecture Notes},
+  author={Collins, Michael},
+  journal={Lecture Notes},
+  url={http://www.cs.columbia.edu/~mcollins/},
+  year={2013}
 }
 
 
