--- a/slides/bio.bib
+++ b/slides/bio.bib
@@ -1564,6 +1564,14 @@ url="https://doi.org/10.1007/978-94-017-2390-9_10"
   year={2013}
 }
 
+@inproceedings{snow2008cheap,
+  title={Cheap and fast--but is it good? evaluating non-expert annotations for natural language tasks},
+  author={Snow, Rion and O’connor, Brendan and Jurafsky, Dan and Ng, Andrew Y},
+  booktitle={Proceedings of the 2008 conference on empirical methods in natural language processing},
+  pages={254--263},
+  year={2008}
+}
+
 
 
 @Comment{jabref-meta: databaseType:bibtex;}
