--- a/slides/bio.bib
+++ b/slides/bio.bib
@@ -1572,6 +1572,12 @@ url="https://doi.org/10.1007/978-94-017-2390-9_10"
   year={2008}
 }
 
+@techreport{page1998pagerank,
+  title={The pagerank citation ranking: Bring order to the web},
+  author={Page, Lawrence and Brin, Sergey and Motwani, Rajeev and Winograd, Terry},
+  year={1998},
+  institution={Technical report, stanford University}
+}
 
 
 @Comment{jabref-meta: databaseType:bibtex;}
