--- a/slides/bio.bib
+++ b/slides/bio.bib
@@ -1579,5 +1579,21 @@ url="https://doi.org/10.1007/978-94-017-2390-9_10"
   institution={Technical report, stanford University}
 }
 
+@book{fort2016collaborative,
+  title={Collaborative annotation for reliable natural language processing: Technical and sociological aspects},
+  author={Fort, Kar{\"e}n},
+  year={2016},
+  publisher={John Wiley \& Sons}
+}
+
+@book{pustejovsky2012natural,
+  title={Natural Language Annotation for Machine Learning: A guide to corpus-building for applications},
+  author={Pustejovsky, James and Stubbs, Amber},
+  year={2012},
+  publisher={" O'Reilly Media, Inc."}
+}
+
+
+
 
 @Comment{jabref-meta: databaseType:bibtex;}
