--- a/apunte/bio.bib
+++ b/apunte/bio.bib
@@ -1594,6 +1594,16 @@ url="https://doi.org/10.1007/978-94-017-2390-9_10"
 }
 
 
+@article{mosteller1963inference,
+  title={Inference in an authorship problem: A comparative study of discrimination methods applied to the authorship of the disputed Federalist Papers},
+  author={Mosteller, Frederick and Wallace, David L},
+  journal={Journal of the American Statistical Association},
+  volume={58},
+  number={302},
+  pages={275--309},
+  year={1963},
+  publisher={Taylor \& Francis}
+}
 
 
 @Comment{jabref-meta: databaseType:bibtex;}
