--- a/apunte/bio.bib
+++ b/apunte/bio.bib
@@ -1605,5 +1605,14 @@ url="https://doi.org/10.1007/978-94-017-2390-9_10"
   publisher={Taylor \& Francis}
 }
 
+@article{firth1957synopsis,
+  title={A synopsis of linguistic theory, 1930-1955},
+  author={Firth, John},
+  journal={Studies in linguistic analysis},
+  pages={10--32},
+  year={1957}
+}
+
+
 
 @Comment{jabref-meta: databaseType:bibtex;}
