--- a/slides/bio.bib
+++ b/slides/bio.bib
@@ -1,5 +1,15 @@
 % Encoding: x-MacRoman
 
+
+@misc{lewis2021retrievalaugmented,
+      title={Retrieval-Augmented Generation for Knowledge-Intensive NLP Tasks}, 
+      author={Patrick Lewis and Ethan Perez and Aleksandra Piktus and Fabio Petroni and Vladimir Karpukhin and Naman Goyal and Heinrich Küttler and Mike Lewis and Wen-tau Yih and Tim Rocktäschel and Sebastian Riedel and Douwe Kiela},
+      year={2021},
+      eprint={2005.11401},
+      archivePrefix={arXiv},
+      primaryClass={cs.CL}
+}
+
 @InProceedings{Wiebe2000,
   Title                    = {Effects of Adjective Orientation and Gradability on Sentence Subjectivity},
   Author                   = {Vasileios Hatzivassiloglou and Janyce Wiebe},
