--- a/slides/bio.bib
+++ b/slides/bio.bib
@@ -1618,5 +1618,12 @@ url="https://doi.org/10.1007/978-94-017-2390-9_10"
   year={2023}
 }
 
+@inproceedings{yao2022react,
+  title={ReAct: Synergizing Reasoning and Acting in Language Models},
+  author={Yao, Shunyu and Zhao, Jeffrey and Yu, Dian and Du, Nan and Shafran, Izhak and Narasimhan, Karthik R and Cao, Yuan},
+  booktitle={The Eleventh International Conference on Learning Representations},
+  year={2022}
+}
+
 
 @Comment{jabref-meta: databaseType:bibtex;}
